# molecule-parser

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
molecule_parser/: __init__.py  lexer.py  parser.py  validators.py
tests/: test_molecule_parser.py  test_validators.py
