[tool.poetry]
name = "molecule-parser"
version = "0.1.0"
description = ""
authors = ["Philipp Albrecht <philipp.albrecht@momox.biz>"]

[tool.poetry.dependencies]
python = "^3.9"
pre-commit = "^2.13.0"
isort = "^5.8.0"
flake8 = "^3.9.2"
black = "^21.6b0"
mypy = "^0.902"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
